--- a/public/debtPositions.html
+++ b/public/debtPositions.html
@@ -55,7 +55,8 @@
     <div class="container mt-">
         <div class="d-flex min-vh-100 justify-content-center align-items-center">
             <section class="border rounded p-4 py-5 shadow">
-                <button id="btnliquidate" class="btn btn-primary">Liquidate</button>
+                <button id="btnliquidate" class="btn btn-danger">Liquidate</button>
+                <br />
                 <table id="debtPositionsTable" class="ui celled table stripe">
                     <thead>
                         <tr>
