--- a/public/burn.html
+++ b/public/burn.html
@@ -37,6 +37,9 @@
             <a class="nav-link" href="burn">Burn</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="transfer">tansfer NFT</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="debtPositions">Positions</a>
           </li>
         </ul>
