--- a/public/debtPositions.html
+++ b/public/debtPositions.html
@@ -46,6 +46,9 @@
                         <a class="nav-link" href="burn">Burn</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="transfer">tansfer NFT</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="debtPositions">Positions</a>
                     </li>
                 </ul>
@@ -72,9 +75,9 @@
         </div>
     </div>
     <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
-    <script type="text/javascript"> 
+    <script type="text/javascript">
         var table;
-        
+
         function createTable() {
             table = $('#debtPositionsTable').DataTable({
                 destroy: true,
