--- a/public/transfer.html
+++ b/public/transfer.html
@@ -34,7 +34,7 @@
             <a class="nav-link" href="burn">Burn</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="transfer">tansfer NFT</a>
+            <a class="nav-link" href="transfer">transfer NFT</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="debtPositions">Positions</a>
